examples/fail/return_missing.hax
module ZZZ::ReturnMissing;

sub main() -> Int {
  if true {
    return 1;
  }
  # missing return on else path
}
